Show http method in the connector builder test panel request tab
