# airbyte-connector-builder-server/connector_builder/generated/models/http_request.py
@@ -20,11 +20,13 @@ class HttpRequest(BaseModel):
         parameters: The parameters of this HttpRequest [Optional].
         body: The body of this HttpRequest [Optional].
         headers: The headers of this HttpRequest [Optional].
+        http_method: The http_method of this HttpRequest [Optional].
     """
 
     url: str
     parameters: Optional[Dict[str, Any]] = None
     body: Optional[Dict[str, Any]] = None
     headers: Optional[Dict[str, Any]] = None
+    http_method: Optional[str] = None
 
 HttpRequest.update_forward_refs()
