# airbyte-connector-builder-server/src/main/openapi/openapi.yaml
@@ -166,6 +166,10 @@ components:
         headers:
           type: object
           description: The headers of the HTTP request, if any
+        http_method:
+          type: string
+          enum: ["GET", "POST", "PUT", "PATCH"]
+          description: The http method of the request ("GET", "POST", "PUT", or "PATCH")
     HttpResponse:
       type: object
       required:
